--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,9 +1,15 @@
 <section class="blog_w3ls pb-5" id="why">
 		<div class="container pb-xl-5 pb-lg-3">
 			<h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Why Choose Us</h3>
-		
-				<app-blog-grid></app-blog-grid>
+			<div class="row">
+				<!-- blog grid -->
+				
+						<app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid>
+            <app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid>
+            <app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid>
+				
+				<!-- //blog grid -->
 			
-			
+			</div>
 		</div>
 	</section> 
