4 files modified, 5 added

--- a/src/app/blog-grid/blog-grid.component.html
+++ b/src/app/blog-grid/blog-grid.component.html
@@ -1,4 +1,4 @@
-<div class="card border-0 med-blog">
+<!-- <div class="card border-0 med-blog">
 <div class="card-header p-0">
 	<a href="single.html">
 		<img class="card-img-bottom" src="https://dummyimage.com/250X150/000/fff" alt="Card image cap">
@@ -15,4 +15,5 @@
 	</div>
 	<p>Cras ultricies ligula sed magna dictum porta auris blandita.</p>
 </div>
-</div>
+</div> -->
+{{product.name}}
