--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,15 +1,44 @@
 <section class="blog_w3ls pb-5" id="why">
-		<div class="container pb-xl-5 pb-lg-3">
-			<h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Why Choose Us</h3>
-			<div class="row">
-				<!-- blog grid -->
-				
-						<app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid>
+	<div class="container pb-xl-5 pb-lg-3">
+		<h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3">Why Choose Us</h3>
+		<div class="row">
+			<!-- blog grid -->
+
+			<!-- <app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid>
             <app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid>
-            <app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid>
-				
+            <app-blog-grid class="col-lg-4 col-md-6"></app-blog-grid> -->
+			<div class="card border-0 med-blog">
+				<div class="card-header p-0">
+
+					<img class="card-img-bottom" src="https://dummyimage.com/250X150/000/fff" alt="Card image cap">
+
+				</div>
+					<div class="card-body border border-top-0">
+						<h4 class="card-title">
+							<a href="#">{{product.name}}</a>
+						</h4>
+						<h5>${{product.price}}</h5>
+						<p class="card-text">{{product.desc}}</p>
+						<p class="card-text">{{product.status ? 'In stock': 'Out stock'}}</p>
+            	</div>
+						<!-- <div class="mb-3">
+						<h5 class="blog-title card-title m-0">Quality Products
+						</h5>
+						<div class="blog_w3icon">
+							<span>Magna Kictum - loremipsum</span>
+						</div>
+					</div>
+					<p>Cras ultricies ligula sed magna dictum porta auris blandita.</p> -->
+				<div class="card-footer">
+          
+          
+          <button (click)="removeItem(product.id)">Delete</button>
+          
+      </div>
+				</div>
+
 				<!-- //blog grid -->
-			
+
 			</div>
 		</div>
-	</section> 
+</section>
